--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -20,6 +20,7 @@ $link-color:                    #08c;
 $brand-primary:                 #3f51b5; // #0275d8
 $brand-danger:                  #f44336; // #d9534f;
 $brand-warning:                 #ff9800; // #f0ad4e;
+$brand-info:                    #78909c; // #5bc0de;
 
 $headings-line-height:          1.3;
 
