--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductsByTag.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductsByTag.cshtml
@@ -25,7 +25,7 @@
 }
 
 @section left {
-	@{ Html.RenderAction("Filter", "Search"); }
+	@{ Html.RenderAction("Filters", "Search", new { model = Model }); }
 }
 
 <div class="page product-tag-page">
