--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
@@ -165,13 +165,10 @@ $searchbox-hit-tag-color:           darken($brand-warning, 10%);
 // Facettes
 // --------------------------------------------------
 
-.offcanvas .nav-filter {
-    font-size: 1rem;
-}
-
 .facet-group {
 	position: relative;
 	border-bottom: 1px solid rgba(0,0,0, 0.12);
+    font-size: 14px;
     /*&:last-child {
 	    border-bottom: none;
     }*/
@@ -218,13 +215,13 @@ $searchbox-hit-tag-color:           darken($brand-warning, 10%);
 
 .facet-values-inner {
 	line-height: 1.3;
-	max-height: 200px;
-	overflow-y: hidden;
-    padding: 2px 0;
+	//max-height: 200px;
+	//overflow-y: hidden;
+    padding: 4px 0;
 }
 
 .facet-values.in .facet-values-inner {
-	overflow-y: auto;
+	//overflow-y: auto;
 }
 
 
@@ -344,4 +341,49 @@ $facet-control-size:        20px;
     .facet-control-native:checked ~ & {
         font-weight: 600;
     }
+}
+
+
+//
+// Facettes (active filters)
+// --------------------------------------------------
+
+.active-filters-container {
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.active-filters {
+    position: relative;
+    margin: -0.25rem;
+}
+
+.active-filter-item {
+    display: block;
+    padding: 0.25rem;
+    float: left;
+}
+
+.active-filter-link {
+    position: relative;
+    font-weight: 400;
+    padding: 0.2rem 0.6rem;
+    max-width: 12rem;
+    padding-right: 25px;
+    border-width: 0;
+
+    &:after {
+        position: absolute;
+        display: block;
+        content: '\00d7';
+        right: 6px;
+        top: 3px;
+        font-size: 20px;
+        line-height: 1;
+    }
+}
+
+.active-filter-label {
+    display: block;
+    @include text-truncate();
 }
