--- a/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
@@ -19,7 +19,7 @@
 }
 
 @section left {
-	@{ Html.RenderAction("Filter", "Search"); }
+	@{ Html.RenderAction("Filters", "Search", new { model = Model }); }
 }
 
 <div class="page manufacturer-page">
