OffCanvasMenu minor fixes

--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
@@ -6,7 +6,7 @@
     Layout = "";
 }
 
-<div class="category-container">
+<div class="category-container offcanvas-scrollable">
 
 	@if (Model.Name.HasValue())
 	{
