--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
@@ -1,4 +1,6 @@
-﻿@{ 
+﻿@using SmartStore.Web.Models.Catalog;
+@model OffCanvasMenuModel
+@{ 
 	var labelStyle = GetThemeVariable<string>("shopbar-label", "warning");
 }
 
@@ -13,18 +15,17 @@
 
         <ul class="nav nav-tabs nav-tabs-line row no-gutters flex-nowrap" role="tablist">
             <li class="nav-item col-xs">
-                <a id="category-tab" class="nav-link" data-toggle="tab" href="#ocm-categories" role="tab" data-url="@Url.Action("OffCanvasMenuCategories", "Catalog")">
-                    <span class="title hidden-xs-up">@T("Offcanvas.Menu.Categories")</span>
-					<span class="title">Sortiment</span> <!-- Englisch: Categories -->
+                <a id="category-tab" class="nav-link" data-toggle="tab" href="#ocm-categories" role="tab" data-url="@Url.Action("OffCanvasMenuCategories", "Catalog")" data-initialized="false">
+                    <span class="title">@T("Offcanvas.Menu.Categories")</span>
                 </a>
             </li>
             <li class="nav-item col-xs">
-                <a id="manufacturer-tab" class="nav-link" data-toggle="tab" href="#ocm-manufacturers" role="tab" data-url="@Url.Action("OffCanvasMenuManufacturer", "Catalog")">
+                <a id="manufacturer-tab" class="nav-link" data-toggle="tab" href="#ocm-manufacturers" role="tab" data-url="@Url.Action("OffCanvasMenuManufacturer", "Catalog")" data-initialized="false">
                     <span class="title">@T("Offcanvas.Menu.Brands")</span>
                 </a>
             </li>
             <li class="nav-item col-xs">
-                <a id="help-tab" class="nav-link" data-toggle="tab" href="#ocm-help" role="tab" data-url="@Url.Action("OffCanvasMenuHelp", "Catalog")" data-initialized="false">
+                <a id="help-tab" class="nav-link" data-toggle="tab" href="#ocm-help" role="tab" data-initialized="false">
                     <span class="title">@T("Offcanvas.Menu.Help")</span>
                 </a>
             </li>
@@ -39,26 +40,39 @@
         <div class="tab-pane fade" id="ocm-help" role="tabpanel"></div>
     </div>
 
-    <div class="offcanvas-menu-footer">
-        <div class="row xs-gutters justify-content-around">
-            <div class="col-xs-6">
-                <div id="ocm-currency-selector" class="mf-dropdown">
-                    <button class="btn btn-secondary btn-labeled icon-right btn-block text-xs-left">
-                        <span data-bind="name"></span>
-                        <b><i class="fa fa-caret-down"></i></b>
-                    </button>
-                    <select class="form-control noskin"></select>
-                </div>
-            </div>
-            <div class="col-xs-6">
-                <div id="ocm-language-selector" class="mf-dropdown">
-                    <button class="btn btn-secondary btn-labeled icon-right btn-block text-xs-left">
-                        <span data-bind="name"></span>
-                        <b><i class="fa fa-caret-down"></i></b>
-                    </button>
-                    <select class="form-control noskin"></select>
-                </div>
+    @if (Model.DisplayCurrencySelector || Model.DisplayLanguageSelector)
+    {
+        <div class="offcanvas-menu-footer">
+            <div class="row xs-gutters justify-content-around flex-nowrap">
+
+                @if (Model.DisplayCurrencySelector)
+                {
+                    <div class="col-xs">
+                        <div id="ocm-currency-selector" class="mf-dropdown">
+                            <button class="btn btn-secondary btn-labeled icon-right btn-block text-xs-left">
+                                <span data-bind="name"></span>
+                                <b><i class="fa fa-caret-down"></i></b>
+                            </button>
+                            <select class="form-control noskin"></select>
+                        </div>
+                    </div>
+                }
+                
+                @if (Model.DisplayLanguageSelector)
+                {
+                    <div class="col-xs">
+                        <div id="ocm-language-selector" class="mf-dropdown">
+                            <button class="btn btn-secondary btn-labeled icon-right btn-block text-xs-left">
+                                <span data-bind="name"></span>
+                                <b><i class="fa fa-caret-down"></i></b>
+                            </button>
+                            <select class="form-control noskin"></select>
+                        </div>
+                    </div>
+                }
+
             </div>
         </div>
-    </div>
+    }
+
 </div>
