--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.cshtml
@@ -72,7 +72,7 @@
 			<div class="artlist-action-group artlist-action-group--filtersort">
 				@{ Html.RenderPartial("Product.List.FilterSort", Model); }
 			</div>
-					}
+		}
 
 		@if (pagerHtml.HasValue() || Model.AllowViewModeChanging)
 		{
@@ -93,7 +93,7 @@
 	</div>
 }
 
-@{ Html.RenderAction("ActiveFilters", "Search"); }
+@{ Html.RenderAction("ActiveFilters", "Search", new { area = "" }); }
 
 <div id="@id" class='@String.Join(" ", listCssClasses)'>
 	@foreach (var product in Model.Items)
