--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Price.cshtml
@@ -27,12 +27,12 @@
 		string value = customRangeFacet.Value.Value != null ? customRangeFacet.Value.Value.ToString() : "";
 		string upperValue = customRangeFacet.Value.UpperValue != null ? customRangeFacet.Value.UpperValue.ToString() : "";
 
-		<div class="d-flex flex-nowrap m-t-1">
+		<div class="d-flex flex-nowrap align-items-center m-t-1">
 			<div class="flex-grow-1 p-r-05">
 				<input type="text" id="price-range-from" class="form-control form-control-sm" value="@value" placeholder="@T("Search.PriceRange.From")" maxlength="5" />
 			</div>
 			<div class="flex-grow-0 fw-700">
-				<span style="line-height: 37px; vertical-align: middle">-</span>
+				<span>-</span>
 			</div>
 			<div class="flex-grow-1 p-l-05">
 				<input type="text" id="price-range-to" class="form-control form-control-sm" value="@upperValue" placeholder="@T("Search.PriceRange.To")" maxlength="5" />
