--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
@@ -1,4 +1,4 @@
-﻿@model AjaxCategoryModel
+﻿@model AjaxMenuItemModel
 
 @using SmartStore.Web.Models.Catalog;
 
@@ -6,8 +6,7 @@
     Layout = "";
 }
 
-<div class="category-container offcanvas-scrollable">
-
+<div class="category-container">
 	@if (Model.Name.HasValue())
 	{
 		<div class="category-info">
@@ -16,19 +15,18 @@
 	}
 
     <ul class="nav navbar-nav">
-
         @if (Model.Id != 0)
         {
-            <li class="back-to-parent-cat nav-item" data-id="@Model.ParentCategory.Id">
+            <li class="navigate-back nav-item" data-id="@Model.ParentCategory.Id">
                 <a href="@Url.RouteUrl("Category", new { SeName = Model.ParentCategory.SeName })" class="nav-link">
                     <i class="fa fa-chevron-left"></i>
 					<span>@T("Common.Back")</span>
                 </a>
             </li>
 
-            <li class="go-to-current-cat nav-item" data-id="@Model.Id" data-ajax="false">
+            <li class="show-current-cat nav-item" data-id="@Model.Id" data-ajax="false">
                 <a href="@Url.RouteUrl("Category", new { SeName = Model.SeName })" class="nav-link">
-                    @Model.Name @T("Anzeigen")
+                    @T("Offcanvas.Menu.ShowCurrentCat", Model.Name)
                 </a>
             </li>
         }
@@ -37,9 +35,23 @@
         {
             <li class="sub-cat nav-item@(cat.HasChildren ? " has-children" : "")" data-id="@cat.Id" data-ajax="@(cat.HasChildren ? "true" : "false")">
                 <a href="@Url.RouteUrl("Category", new { SeName = cat.SeName })" class="nav-link">
+
+                    @if (cat.PictureUrl.HasValue())
+                    {
+                        <img src="@cat.PictureUrl" />
+                    }
+
                     @cat.Name
                 </a>
             </li>
         }
+
+        @if (Model.IsManufacturerTab)
+        {
+            <li class="show-all-manufacturers nav-item" data-ajax="false">
+                <a href="@Url.RouteUrl("ManufacturerList")" class="btn btn-block btn-warning">@T("Manufacturers.ViewAll")</a>
+            </li>
+        }
+        
     </ul>
 </div>
