--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Price.cshtml
@@ -29,13 +29,13 @@
 
 		<div class="d-flex flex-nowrap align-items-center m-t-1">
 			<div class="flex-grow-1 p-r-05">
-				<input type="text" id="price-range-from" class="form-control form-control-sm" value="@value" placeholder="@T("Search.PriceRange.From")" maxlength="5" />
+				<input type="number" maxlength="7" id="price-range-from" class="form-control form-control-sm" value="@value" placeholder="@T("Search.PriceRange.From")" />
 			</div>
 			<div class="flex-grow-0 fw-700">
 				<span>-</span>
 			</div>
 			<div class="flex-grow-1 p-l-05">
-				<input type="text" id="price-range-to" class="form-control form-control-sm" value="@upperValue" placeholder="@T("Search.PriceRange.To")" maxlength="5" />
+				<input type="number" maxlength="7" id="price-range-to" class="form-control form-control-sm" value="@upperValue" placeholder="@T("Search.PriceRange.To")" />
 			</div>
 			<div class="flex-grow-0 p-l-1">
 				<button type="button" class="btn btn-primary btn-sm btn-icon" id="btn-custom-price-range">
