--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/ManufacturerNavigation.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/ManufacturerNavigation.cshtml
@@ -1,7 +1,4 @@
-﻿@using SmartStore.Core.Domain.Catalog;
-@using SmartStore.Core.Infrastructure;
-@using SmartStore.Services.Catalog;
-@using SmartStore.Web.Models.Catalog;
+﻿@using SmartStore.Web.Models.Catalog;
 @model ManufacturerNavigationModel
 @if (Model.Manufacturers.Count > 0)
 {
@@ -35,7 +32,7 @@
                 <div class="clearfix">&nbsp;</div>
             }
             
-            @if (Model.TotalManufacturers > Model.Manufacturers.Count)
+            @if (Model.DisplayAllManufacturersLink)
             {
                 <div class="view-all">
                     <a href="@Url.RouteUrl("ManufacturerList")">@T("Manufacturers.ViewAll")</a>
