--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
@@ -7,12 +7,12 @@
     <div class="offcanvas-menu-header">
         <ul class="nav nav-tabs nav-tabs-line row no-gutters flex-nowrap" role="tablist">
             <li class="nav-item col-xs">
-                <a id="category-tab" class="nav-link" data-toggle="tab" href="#ocm-categories" role="tab" data-url="@Url.Action("OffCanvasMenuCategories", "Catalog")" data-initialized="false">
+                <a id="category-tab" class="nav-link" data-toggle="tab" href="#ocm-categories" role="tab" data-initialized="false">
                     <span class="title">@T("Offcanvas.Menu.Categories")</span>
                 </a>
             </li>
             <li class="nav-item col-xs">
-                <a id="manufacturer-tab" class="nav-link" data-toggle="tab" href="#ocm-manufacturers" role="tab" data-url="@Url.Action("OffCanvasMenuManufacturer", "Catalog")" data-initialized="false">
+                <a id="manufacturer-tab" class="nav-link" data-toggle="tab" href="#ocm-manufacturers" role="tab" data-initialized="false">
                     <span class="title">@T("Offcanvas.Menu.Brands")</span>
                 </a>
             </li>
