--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Price.cshtml
@@ -14,7 +14,7 @@
 		{
 			<div class="facet-radio" data-href="@Url.FacetToggle(facet)">
 				<label>
-					<input class="facet-control-native" type="radio" name="optradio" value="@facet.Value.ToString()" data-parentid="@facet.Value.ParentId" @Html.Attr("checked", "checked", facet.Value.IsSelected)>
+					<input class="facet-control-native" type="radio" name="optradio" value="@facet.Value.ToString()" @Html.Attr("checked", "checked", facet.Value.IsSelected)>
 					<span class="facet-control-ui"></span>
 					<span class="facet-label" @Html.Attr("data-count", facet.HitCount.ToString("N0"), facet.HitCount > 0)>@(facet.Value.Label ?? facet.Value.ToString())</span>
 				</label>
